[gd_scene load_steps=14 format=2]

[ext_resource path="res://Riddle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme/Theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.815686, 0.784314, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.694118, 0.639216, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.815686, 0.784314, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 0.588235 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.815686, 0.784314, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.694118, 0.639216, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.815686, 0.784314, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 0.588235 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -40, -155.831 ), Vector2( -40, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -19.9993, 0.0 ]
}

[node name="Riddle" type="PathFollow2D"]
visible = false
modulate = Color( 1, 1, 1, 0 )
z_index = 2
rotate = false
script = ExtResource( 1 )

[node name="Control" type="VBoxContainer" parent="."]
margin_left = -40.0
margin_top = -155.831
margin_right = 94.0
margin_bottom = 23.169
grow_horizontal = 2
grow_vertical = 2
rect_rotation = -19.9993
rect_scale = Vector2( 0.6, 0.6 )
theme = ExtResource( 2 )
custom_constants/separation = 16

[node name="Question" type="Label" parent="Control"]
margin_right = 134.0
margin_bottom = 49.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Principal"
align = 1
valign = 1

[node name="Option1" type="Label" parent="Control"]
margin_top = 65.0
margin_right = 134.0
margin_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.172549, 0.227451, 0.270588, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 0 )
custom_colors/font_color_shadow = Color( 0.172549, 0.227451, 0.270588, 0.392157 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "   "
align = 1
valign = 1

[node name="Option1" type="Button" parent="Control/Option1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Option2" type="Label" parent="Control"]
editor/display_folded = true
margin_top = 130.0
margin_right = 134.0
margin_bottom = 179.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.172549, 0.227451, 0.270588, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 0.172549, 0.227451, 0.270588, 0.392157 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "   "
align = 1
valign = 1

[node name="Option2" type="Button" parent="Control/Option2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="pressed" from="Control/Option1/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Control/Option2/Option2" to="." method="_on_Option2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
